# chzzk-rs

./: .gitignore  Cargo.toml
src/: error.rs  lib.rs  live.rs  model.rs  request.rs
src/live/: get_live_detail.rs  get_live_status.rs
src/model/: channel.rs  live.rs
