[package]
name = "chzzk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
serde_qs = "0.12"
serde_path = { git = "https://github.com/syrflover/serde_path", tag = "0.4.1" }
mime = "0.3"
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }
cookie = { git = "https://github.com/syrflover/cookie-rs", rev = "8948d1f" }

[dev-dependencies]
tokio = { version = "1.36", features = ["rt-multi-thread", "macros"] }
